Fix project description spacing

--- a/src/pages/ProjectDetailsPage/projectDetailPage.css
+++ b/src/pages/ProjectDetailsPage/projectDetailPage.css
@@ -31,12 +31,14 @@
   font-family: var(--mainFontFamily), serif;
   font-style: normal;
   font-weight: var(--mainFontWeight);
-  height: 30px;
   display: flex;
   align-items: center;
   color: #3d7844;
+  margin: 5px;
 }
 
 hr {
   border-top: 2px solid #3d7844;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
